syntax = "proto3";

package ru.homework.otus.protobuf;

option java_multiple_files = true;

message BoundsMessage {
  int64 firstValue = 1;
  int64 lastValue = 100;
}

message DataMessage {
  int64 value = 1;
}

service RemoteDataService {
  rpc getData(BoundsMessage) returns (stream DataMessage);
}
